hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@llvm21_idivmod_checked_u_[6].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [24 x i8] c"Attempted division by 0\00", align 1

define internal { i1, { i64, i64 }, { i32, ptr } } @_hl.main.1(i64 %0, i64 %1) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %valid_div = icmp ne i64 %1, 0, !dbg !17
  %quotient = udiv i64 %0, %1, !dbg !17
  %remainder = urem i64 %0, %1, !dbg !17
  %2 = insertvalue { i64, i64 } poison, i64 %quotient, 0, !dbg !17
  %3 = insertvalue { i64, i64 } %2, i64 %remainder, 1, !dbg !17
  %4 = insertvalue { i1, { i64, i64 }, { i32, ptr } } { i1 true, { i64, i64 } poison, { i32, ptr } poison }, { i64, i64 } %3, 1, !dbg !17
  %5 = select i1 %valid_div, { i1, { i64, i64 }, { i32, ptr } } %4, { i1, { i64, i64 }, { i32, ptr } } { i1 false, { i64, i64 } poison, { i32, ptr } { i32 2, ptr @0 } }, !dbg !17
  ret { i1, { i64, i64 }, { i32, ptr } } %5
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !12, !12}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i64, i64 }, { i32, ptr } }", file: !2, size: 28, align: 8, elements: !8)
!8 = !{!9, !10, !13}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, i64 }", file: !2, size: 16, align: 8, elements: !11)
!11 = !{!12, !12}
!12 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!13 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 12, align: 8, elements: !14)
!14 = !{!15, !16}
!15 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!16 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!17 = !DILocation(line: 5299, column: 65, scope: !3)
